# 4brar.me

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  curl-test.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.router.yml  requirements.txt
.claude/skills/pr/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  data.py  database.py  main.py  models.py
app/routes/: api.py  pages.py
app/static/styles/: main.css
app/templates/: aboutme.html  base.html  blog.html  index.html  timeline.html  travel.html  work.html
docs/: local-development.md
k8s/: namespace.yaml
k8s/backend/: deployment.yaml  service.yaml
k8s/ingress/: cert-issuer.yaml  ingress.yaml  middleware.yaml
k8s/mariadb/: service.yaml  statefulset.yaml
k8s/monitoring/grafana/: configmap-dashboard-files.yaml  configmap-dashboards.yaml  configmap-datasource.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/monitoring/node-exporter/: daemonset.yaml  service.yaml
k8s/monitoring/prometheus/: configmap.yaml  deployment.yaml  pvc.yaml
migrations/: 001_create_tables.sql  002_seed_data.sql
monitoring/: loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: cadvisor.json  endpoint-hits.json  flask.json  (+1 more)
router/user_conf.d/: router.conf
scripts/: deploy.sh  smoke-test.sh
src/: data.rs  main.rs  models.rs  state.rs
src/routes/: api.rs  pages.rs
systemd/: portfolio-monitoring.service  portfolio.service
tests/: conftest.py  test_api.py  test_pages.py
user_conf.d/: myportfolio.conf
(+2 files in other folders)
